--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "pug": "^3.0.2",
+    "redis": "^4.3.1",
     "serve-favicon": "^2.5.0"
   }
 }
