--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
     "debug": "^4.3.4",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "pug": "^3.0.2",
-    "redis": "^4.3.1",
+    "redis": "^2.4.2",
     "serve-favicon": "^2.5.0"
   }
 }
