--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "community",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,7 +16,7 @@
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "pug": "^3.0.2",
-    "redis": "^2.4.2",
+    "redis": "^4.4.0",
     "serve-favicon": "^2.5.0"
   }
 }
